First complete version.

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -8,13 +9,10 @@
 
     <link type="text/css" rel="stylesheet" href="main.css" />
 </head>
+
 <body>
     <img src="logo.png" alt="DFINITY logo" />
-    <section>
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button id="clickMeBtn">Click Me!</button>
-    </section>
-    <section id="greeting"></section>
+    <div id="index"></div>
 </body>
+
 </html>
