--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,18 +1,100 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+  <head>
+  <!--<link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>-->
+  <link rel="stylesheet" href="css/keys.css" type="text/css" />
+    <style>
+      @font-face {
+        font-family: 'Press Start 2P';
+        src: url(fonts/PressStart2P-Regular.ttf);
+      }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>my_counter</title>
-    <base href="/">
+      @font-face {
+        font-family: "Droid Sans";
+        src: url('fonts/DroidSans.eot');
+        src: url('fonts/DroidSans.eot?#iefix') format('embedded-opentype'),
+         url('fonts/DroidSans.woff2') format('woff2'),
+         url('fonts/DroidSans.woff') format('woff'),
+         url('fonts/DroidSans.ttf') format('truetype'),
+         url('fonts/DroidSans.svg#droid_sansregular') format('svg');
+      }
 
-    <link type="text/css" rel="stylesheet" href="main.css" />
-</head>
+      html {
+        width: 100%;
+      }
 
-<body>
-    <img src="logo.png" alt="DFINITY logo" />
-    <div id="index"></div>
-</body>
+      body {
+        background-color: #2c3e50;
+        margin: 0 0;
+        padding: 0;
+        font-family: "Droid Sans", "sans-serif";
+        color: #bdc3c7;
+      }
 
+      .center {
+        width: 50%;
+        display: block;
+        margin: auto;
+        padding: 0;
+      }
+
+      h1, p {
+        text-align: center
+      }
+
+      #canvas {
+        padding: 0;
+        margin: auto;
+        display: block;
+        border-style: solid;
+        border-width: 1px;
+        font-family: 'Press Start 2P';
+      }
+
+      kbd {
+        font-size: 8pt;
+      }
+    </style>
+  </head>
+  <body>
+  <a href="https://github.com/cristianoc/mareo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+  <div class="center">
+    <h1>Mareo</h1>
+    <canvas id="canvas" width="512" height="256"></canvas>
+  </div>
+  <div class="center" style="padding:5px">
+    <h3>How to play:</h3>
+    <table>
+      <tr>
+        <td>
+          <kbd class="light">&larr;</kbd>/<kbd class="light">A</kbd>&nbsp
+          <kbd class="light">&rarr;</kbd>/<kbd class="light">D</kbd>
+        </td>
+        <td>Move left/right</td>
+      </tr>
+      <tr>
+        <td>
+          <kbd class="light">&uarr;</kbd>/<kbd class="light">SPACE</kbd>/<kbd class="light">W</kbd>&nbsp
+        </td>
+        <td>Jump</td>
+      </tr>
+      <tr>
+        <td>
+          <kbd class="light">&darr;</kbd>&nbsp;<kbd class="light">S</kbd>&nbsp
+        </td>
+        <td>Crouch</td>
+      </tr>
+      <tr>
+        <td>
+          <kbd class="light">B</kbd>&nbsp
+        </td>
+        <td>Togglex draw bounding boxes</td>
+      </tr>
+    </table>
+  </div>
+
+  <!-- <script src="./Mareo.js"></script> -->
+
+  </body>
 </html>
