Add support for pause with keyP.

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -89,7 +89,13 @@
         <td>
           <kbd class="light">B</kbd>&nbsp
         </td>
-        <td>Togglex draw bounding boxes</td>
+        <td>Toggle draw bounding boxes</td>
+      </tr>
+      <tr>
+        <td>
+          <kbd class="light">P</kbd>&nbsp
+        </td>
+        <td>Toggle pause</td>
       </tr>
     </table>
   </div>
