Add toggle for second player.

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -97,6 +97,12 @@
         </td>
         <td>Toggle pause</td>
       </tr>
+      <tr>
+        <td>
+          <kbd class="light">2</kbd>&nbsp
+        </td>
+        <td>Toggle second player</td>
+      </tr>
     </table>
   </div>
 
